Fix missing high contrast tooltip on narrow screens

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -615,7 +615,7 @@
   opacity: 1;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 999px) {
   .Header-tooltip {
     display: none;
   }
